run_3/gds/o1-preview_results/Triangle.err
Error in Triangle.gds:

  File "/tmp/tmp51cgdagz/temp_script.py", line 32
    pip install gdspy
        ^^^^^^^
SyntaxError: invalid syntax
